Revert to Java 21, restore getFirst() calls, and add comprehensive controller tests